// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSelectors should pass error state data through response: error state data 1`] = `
{
  "session": {
    "admin": false,
    "authorized": {},
    "entitled": false,
    "error": true,
    "errorCodes": [
      "loremIpsum",
    ],
    "errorMessage": "lorem ipsum",
    "permissions": {},
    "status": 403,
  },
}
`;

exports[`UserSelectors should pass existing state data through response: existing state data 1`] = `
{
  "session": {
    "admin": false,
    "authorized": {},
    "entitled": false,
    "error": false,
    "permissions": {},
  },
}
`;

exports[`UserSelectors should pass minimal data on missing a reducer response: missing reducer error 1`] = `
{
  "session": {
    "admin": false,
    "authorized": {},
    "entitled": false,
    "error": false,
    "permissions": {},
  },
}
`;

exports[`UserSelectors should pass transformed data on fulfill: fulfilled state data 1`] = `
{
  "session": {
    "admin": false,
    "authorized": {
      "subscriptions": true,
    },
    "entitled": true,
    "error": false,
    "permissions": [
      {
        "subscriptions": {
          "all": true,
          "resources": {
            "*": {
              "*": [],
              "loremCustom": [],
              "read": [],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`UserSelectors should return specific selectors: selectors 1`] = `
{
  "makeUserSession": [Function],
  "userSession": [Function],
}
`;
